Closed Bug 1042625 Opened 10 years ago Closed 10 years ago

Page should be drawn in accordance with the high contrast themes

Categories

(Core :: Widget: Win32, defect)

31 Branch
x86_64
Windows 7
defect
Not set
normal
Points:
1

Tracking

()

VERIFIED FIXED
mozilla34
Iteration:
34.1
Tracking Status
firefox31 --- wontfix
firefox32 + verified
firefox33 + verified
firefox34 --- verified
firefox-esr24 --- unaffected
firefox-esr31 + fixed

People

(Reporter: alice0775, Assigned: Gijs)

References

Details

(Keywords: regression)

Attachments

(2 files)

Attached image screenshot
Web page not drawn as high contrast themes Steps To reproduce: 1. Make sure Windows visual style set to High contrast #1 2. Start Firefox 3. Open web page Actual Results: See Screenshot, Web page not drawn as high contrast themes Regression window(m-c) Good: https://hg.mozilla.org/mozilla-central/rev/88ae1bfaaf3d Mozilla/5.0 (Windows NT 6.1; WOW64; rv:31.0) Gecko/20100101 Firefox/31.0 ID:20140328161633 Broken contents and subview: https://hg.mozilla.org/mozilla-central/rev/4f3443da36a1 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:31.0) Gecko/20100101 Firefox/31.0 ID:20140328164933 Pushlog: http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=88ae1bfaaf3d&tochange=4f3443da36a1 #2 Regression window(fx) Good: https://hg.mozilla.org/integration/fx-team/rev/38c8dbb6ad87 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:31.0) Gecko/20100101 Firefox/31.0 ID:20140328024048 Bad: https://hg.mozilla.org/integration/fx-team/rev/d8a36b893b2b Mozilla/5.0 (Windows NT 6.1; WOW64; rv:31.0) Gecko/20100101 Firefox/31.0 ID:20140328031646 Pushlog: http://hg.mozilla.org/integration/fx-team/pushloghtml?fromchange=38c8dbb6ad87&tochange=d8a36b893b2b Regressed by:: d8a36b893b2b Gijs Kruitbosch ? Bug 946595 - High contrast themes on Windows 8 shouldn't be considered the default theme in CSS, r=jimm
Component: Theme → Widget: Win32
Product: Firefox → Core
Flags: needinfo?(gijskruitbosch+bugs)
Attached patch PatchSplinter Review
*sound of head banging against desk* I can't believe I missed this.
Assignee: nobody → gijskruitbosch+bugs
Status: NEW → ASSIGNED
Attachment #8461927 - Flags: review?(jmathies)
Flags: needinfo?(gijskruitbosch+bugs)
Jenn, can you add this for this iteration? Anthony, can you add this to the QA test protocol/suite? We can't automated-test switching the OS theme, but we should never ever ship this state again.
Iteration: --- → 34.1
Points: --- → 1
QA Whiteboard: [qa+]
Flags: needinfo?(jchaulk)
Flags: in-testsuite-
Flags: in-qa-testsuite?(anthony.s.hughes)
Flags: firefox-backlog+
Florin, please get a Moztrap test added to our regression testrun.
Flags: in-qa-testsuite?(anthony.s.hughes) → in-moztrap?(florin.mezei)
Added to Iteration 34.1
Flags: needinfo?(jchaulk)
New test case: https://moztrap.mozilla.org/manage/caseversion/136170/?from=/manage/cases/. Test was added to the Firefox 32 Regression Test Run. Anthony feel free to review it and contact me if you think anything else is needed.
Flags: in-moztrap?(florin.mezei) → in-moztrap+
QA Contact: florin.mezei
Attachment #8461927 - Flags: review?(jmathies) → review+
Greetings and salutations from the Scottish Highlands, where this comment will probably take more time to make it to bugzilla than writing it took me... :-) https://hg.mozilla.org/integration/fx-team/rev/bf57c733f1fe
Whiteboard: [fixed-in-fx-team]
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Whiteboard: [fixed-in-fx-team]
Target Milestone: --- → mozilla34
Reproduced the issue on Win 7 x64 with Firefox 34 Nightly from July 30th. The issue no longer reproduced on Win 7 x64 with the latest Firefox 34 Nightly: - BuildID: 20140731030206 - User Agent: Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:34.0) Gecko/20100101 Firefox/34.0 I've tried all 4 High Contrast Themes (#1, #2, Black, White) and web pages are displayed accordingly, same as on Firefox 28.
Status: RESOLVED → VERIFIED
QA Whiteboard: [qa+] → [qa!]
Gijs - This is tracked for Beta and Aurora. Can you submit an uplift request?
Flags: needinfo?(gijskruitbosch+bugs)
Comment on attachment 8461927 [details] [diff] [review] Patch (In reply to Lawrence Mandel [:lmandel] from comment #9) > Gijs - This is tracked for Beta and Aurora. Can you submit an uplift request? Yes - apologies for the delay, I was on PTO (was noted in my nickname - it would be nice if bugzilla warned/noted this when requesting needinfo, so you could have picked someone else). Requesting approval for beta, aurora and 31 esr: [Approval Request Comment] If this is not a sec:{high,crit} bug, please state case for ESR consideration: major regression due to bug 946595 completely broke high contrast themes. User impact if declined: high contrast themes don't work. Fix Landed on Version: 34 Risk to taking this patch (and alternatives if risky): very very low - just moving the detection block for high contrast themes before an early return which high contrast themes always hit on Windows versions before Windows 8. String or UUID changes made by this patch: none See https://wiki.mozilla.org/Release_Management/ESR_Landing_Process for more info.
Attachment #8461927 - Flags: approval-mozilla-esr31?
Attachment #8461927 - Flags: approval-mozilla-beta?
Attachment #8461927 - Flags: approval-mozilla-aurora?
Flags: needinfo?(gijskruitbosch+bugs)
Comment on attachment 8461927 [details] [diff] [review] Patch Approving for Aurora, Beta and ESR31. Note on ESR31: approving as this is a regression to an a11y feature.
Attachment #8461927 - Flags: approval-mozilla-esr31?
Attachment #8461927 - Flags: approval-mozilla-esr31+
Attachment #8461927 - Flags: approval-mozilla-beta?
Attachment #8461927 - Flags: approval-mozilla-beta+
Attachment #8461927 - Flags: approval-mozilla-aurora?
Attachment #8461927 - Flags: approval-mozilla-aurora+
QA Whiteboard: [qa!] → [qa+]
The issue no longer reproduces on Win 7 x64 with: - latest Firefox 33 Aurora - BuildID: 20140805004001 - User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:33.0) Gecko/20100101 Firefox/33.0 - Firefox 32 Beta 4 - BuildID: 20140804164216 - User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:32.0) Gecko/20100101 Firefox/32.0 I've verified all 4 High Contrast Themes (#1, #2, Black, White) and web pages are displayed accordingly.
QA Whiteboard: [qa+] → [qa!]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: