Bug 1042625 - High contrast mode detection broken on Windows <8. r=jimm, a=lmandel